--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,6 +16,6 @@
 
 <body>
      <div id="app"></div>
-<script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="scripts.min.js"></script></body>
+</body>
 
 </html>
